--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^11.18.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
-    "motion": "^12.7.4",
+    "motion": "^12.23.22",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
